--- a/DGN/Views/Articles/Details.cshtml
+++ b/DGN/Views/Articles/Details.cshtml
@@ -20,7 +20,7 @@
             <span class="text-white badge bg-secondary">@Html.DisplayFor(model => model.Category.CategoryName)</span>
         </div>
         <div class="card-body">
-            <p class="card-text">@Html.DisplayFor(model => model.Body)</p>
+            <pre class="card-text">@Html.DisplayFor(model => model.Body)</pre>
         </div>
         <div class="card-footer text-muted">
             Creation Date @Html.DisplayFor(model => model.CreationTimestamp)
@@ -47,17 +47,45 @@
     <div id="comment-section">
         @foreach (var item in Model.Comments.OrderByDescending(e => e.CreationTimestamp))
         {
-            <div class="card text-dark bg-light mb-3" style="max-width: 100%;">
+            <div name="@Html.DisplayFor(modelItem => item.Id)" class="card text-dark bg-light mb-3" style="max-width: 100%;">
                 <div class="card-body">
                     <h5 class="card-title">@Html.DisplayFor(modelItem => item.User.FullName)</h5>
                     <p class="card-text">@Html.DisplayFor(modelItem => item.Body)</p>
                 </div>
                 <div class="card-footer bg-light">
-                    <a asp-controller="Comments" asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-controller="Comments" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <button type="button" class="btn btn-link" 
+                            data-toggle="modal" 
+                            data-target="#commentEditModal">Edit</button> |
+                    <button type="button" class="btn btn-link" 
+                            data-toggle="modal" 
+                            data-target="#commentDeleteModal"
+                            data-body="@Html.DisplayFor(modelItem => item.Body)"
+                            data-fullname="@Html.DisplayFor(modelItem => item.User.FullName)"
+                            data-id="@Html.DisplayFor(modelItem => item.Id)">Delete</button>
                 </div>
             </div>
         }
+    </div>
+</div>
+
+<div class="modal fade" id="commentDeleteModal" tabindex="-1" role="dialog" aria-labelledby="commentDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="commentDeleteModalLabel">Are you sure you want to delete this comment?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <h6></h6>
+                <p></p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button id="comment-delete" type="button" class="btn btn-danger" data-dismiss="modal">Delete</button>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -71,14 +99,19 @@
     </script>
 
     <script id="commentTemplate" type="text/html">
-        <div class="card text-dark bg-light mb-3" style="max-width: 100%;">
+        <div name="{id}" class="card text-dark bg-light mb-3" style="max-width: 100%;">
             <div class="card-body">
                 <h5 class="card-title">{fullName}</h5>
                 <p class="card-text">{body}</p>
             </div>
             <div class="card-footer bg-light">
-                <a href="/Comments/Edit/{id}">Edit</a> |
-                <a href="/Comments/Delete/{id}">Delete</a>
+                <button type="button" class="btn btn-link comment-edit">Edit</button> |
+                <button type="button" class="btn btn-link" 
+                            data-toggle="modal" 
+                            data-target="#commentDeleteModal"
+                            data-body="{body}"
+                            data-fullname="{fullName}"
+                            data-id="{id}">Delete</button>
             </div>
         </div>
     </script>
