--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http;
+@using System.Security.Claims;
+@using DGN.Models;
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -39,12 +43,24 @@
                         </li>
                     </ul>
                     <ul class="navbar-nav nav-menu ml-auto">
-                        <li class="nav-item btn-item">
-                            <a href="/Users/Register" class="nav-btn register-btn">Register</a>
-                        </li>
-                        <li class="nav-item last btn-item">
-                            <a href="/Users/Login" class="nav-btn login-btn">Login</a>
-                        </li>
+                        @if (User.Identity.Name != null)
+                        {
+                            <li class="nav-item last">
+                                <a class="navbar-text">Hello @User.Identity.Name </a>
+                            </li>
+                            <li class="nav-item last btn-item">
+                                <a href="/Users/Logout" class="nav-btn login-btn">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item btn-item">
+                                <a href="/Users/Register" class="nav-btn register-btn">Register</a>
+                            </li>
+                            <li class="nav-item last btn-item">
+                                <a href="/Users/Login" class="nav-btn login-btn">Login</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </nav>
@@ -53,7 +69,7 @@
     <main role="main" class="main-body pb-3">
         @RenderBody()
     </main>
-   
+
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2021 - DGN - <a asp-area="" asp-controller="Branches">Contact us</a>
