--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -11,7 +11,7 @@
                 <div class="card">
                     <div class="card-body">
                         <div class="d-flex flex-column align-items-center text-center">
-                            <img src="@Model.ImageLocation" alt="Admin" class="rounded-circle" width="150">
+                            <img src="@Model.ImageLocation" alt="Admin" class="rounded-circle" width="150" height="150">
                             <div class="mt-3">
                                 <h4>@Model.Username</h4>
                                 <p class="text-secondary mb-1">@Model.About</p>
@@ -29,8 +29,12 @@
                             @foreach (Article article in Model.ArticleLikes)
                             {
                                 <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                    <row>
+                                    <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
                                     <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
+                                    </row>
                                 </li>
+                                
                             }
                         }
                         else
@@ -82,31 +86,31 @@
                         </div>
                     </div>
                 </div>
-                @if (Model.Role != UserRole.Client)
-                {
-                    <div class="card mb-3">
-                        <ul class="list-group list-group-flush">
-                            @if (Model.Articles.Count > 0)
+                <div class="card mb-3">
+                    <ul class="list-group list-group-flush">
+                        @if (Model.Articles.Count > 0)
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
+                            </li>
+                            @foreach (Article article in Model.Articles)
                             {
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0"><strong>@Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
-                                </li>
-                                @foreach (Article article in Model.Articles)
-                                {
-                                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                        <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
-                                    </li>
-                                }
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <row>
+                                <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
+                                <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
+                                </row>
+                            </li>
                             }
-                            else
-                            {
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                    <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
-                                </li>
-                            }
-                        </ul>
-                    </div>
-                }
+                        }
+                        else
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
+                            </li>
+                        }
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
