--- a/DGN/Views/Users/Profile.cshtml
+++ b/DGN/Views/Users/Profile.cshtml
@@ -95,18 +95,43 @@
                             </li>
                             @foreach (Article article in Model.Articles)
                             {
-                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                                <row>
-                                <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
-                                <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
-                                </row>
-                            </li>
+                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                    <row>
+                                        <img src="@article.ImageLocation" alt="Admin" width="50" height="50">
+                                        <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@article.Id"> @article.Title </a>
+                                    </row>
+                                </li>
                             }
                         }
                         else
                         {
                             <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                                 <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.Articles) by @Model.Username</strong></h6>
+                            </li>
+                        }
+                    </ul>
+                </div>
+                <div class="card mb-3">
+                    <ul class="list-group list-group-flush">
+                        @if (Model.Comments.Count > 0)
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <h6 class="mb-0"><strong>The articles @Model.Username commented on </strong></h6>
+                            </li>
+                            @foreach (Comment comment in Model.Comments.Distinct())
+                            {
+                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                    <row>
+                                        <img src="@comment.RelatedArticle.ImageLocation" alt="Admin" width="50" height="50">
+                                        <a class="mb-0" asp-controller="Articles" asp-action="Details" asp-route-id="@comment.RelatedArticleId"> @comment.RelatedArticle.Title </a>
+                                    </row>
+                                </li>
+                            }
+                        }
+                        else
+                        {
+                            <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                                <h6 class="mb-0"><strong>There are no @Html.DisplayNameFor(model => model.Comments) by @Model.Username</strong></h6>
                             </li>
                         }
                     </ul>
