Add placeholder to search.

--- a/DGN/Views/Branches/Index.cshtml
+++ b/DGN/Views/Branches/Index.cshtml
@@ -16,7 +16,7 @@
     <form asp-action="Search">
         <div class="row">
             <div class="col">
-                <input name="query" id="query" autocomplete="off" class="form-control" />
+                <input name="query" id="query" autocomplete="off" class="form-control" placeholder="Search" />
             </div>
             <div class="col">
                 <input type="submit" class="btn btn-primary" />
