Marge login.css and register.css into user.css.

--- a/DGN/Views/Users/Register.cshtml
+++ b/DGN/Views/Users/Register.cshtml
@@ -75,5 +75,5 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/register.css" />
+    <link rel="stylesheet" href="~/css/user.css" />
 }
