--- a/DGN/Views/Users/Login.cshtml
+++ b/DGN/Views/Users/Login.cshtml
@@ -44,5 +44,5 @@
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/login.css" />
+    <link rel="stylesheet" href="~/css/user.css" />
 }
