--- a/DGN/Views/Users/ChangePassword.cshtml
+++ b/DGN/Views/Users/ChangePassword.cshtml
@@ -4,37 +4,49 @@
     ViewData["Title"] = "ChangePassword";
 }
 
-<h1>Change Password</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ChangePassword">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label class="control-label">Current Password</label>
-                <input name="currentPassword" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label class="control-label">New Password</label>
-                <input type="text" name="newPassword" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label class="control-label">Confirm New Password</label>
-                <input type="text" name="confirmNewPassword" class="form-control" />
-            </div>
-            @if (ViewBag.Error != null)
-            {
-                <div class="text-danger">@ViewBag.Error</div>
-            }
-            <div class="form-group">
-                <input type="submit" value="Change Password" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+<div class="container">
+    <section id="formSec" class="">
+        <div class="container d-flex align-items-center justify-content-center">
+            <aside>
+                <div class="inner">
+                    <div class="formTitle">
+                        <h2>Change Password</h2>
+                    </div>
+                    <hr class="sep">
+                    <form asp-action="ChangePassword">
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        <div class="form-group">
+                            <label class="control-label">Current Password</label>
+                            <input name="currentPassword" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">New Password</label>
+                            <input type="text" name="newPassword" class="form-control" />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label">Confirm New Password</label>
+                            <input type="text" name="confirmNewPassword" class="form-control" />
+                        </div>
+                        @if (ViewBag.Error != null)
+                        {
+                            <div class="text-danger">@ViewBag.Error</div>
+                        }
+                        <div class="form-group">
+                            <input type="submit" value="Change Password" class="btn btn-primary" />
+                        </div>
+                    </form>
+                </div>
+            </aside>
+        </div>
+    </section>
 </div>
 
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
+
+@section Styles {
+    <link rel="stylesheet" href="~/css/user.css" />
+}
+
