--- a/DGN/Views/Shared/_Layout.cshtml
+++ b/DGN/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewData["Title"] - DGN</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/layout.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
@@ -24,7 +25,7 @@
                         aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" href="#home">
+                <a class="navbar-brand d-none d-lg-block" style="margin: 0; float: none;" asp-controller="Home" asp-action="Index">
                     <img src="~/images/logo.png" />
                 </a>
                 <div class="collapse navbar-collapse" id="navbarToggler">
@@ -57,6 +58,21 @@
                     <ul class="navbar-nav nav-menu ml-auto">
                         @if (User.Identity.Name != null)
                         {
+                        <li class="nav-item btn-item">
+
+                            <div class="dropdown show">
+                                <a class="nav-btn login-btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="bi-wrench"></i>
+                                </a>
+
+                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                    <a class="dropdown-item" asp-controller="Users" asp-action="ChangePassword" asp-route-id="@User.FindFirst(ClaimTypes.NameIdentifier)?.Value">Change password</a>
+                                    <a class="dropdown-item" href="#">Action</a>
+                                    <a class="dropdown-item" href="#">Another action</a>
+                                    <a class="dropdown-item" href="#">Something else here</a>
+                                </div>
+                            </div>
+                        </li>
                             <li class="nav-item last btn-item">
                                 <a asp-controller="Users" asp-action="Logout" class="nav-btn login-btn">Logout</a>
                             </li>
